--- a/view/common/block-layout/resource-text-toggle-caption-below.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption-below.phtml
@@ -69,10 +69,10 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>              
-                <div class="caption">
+                <div class="caption toggle-caption no-overlay">
                     <?php if (isset($caption) && !empty($caption)) : ?>
                         <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?=$uniqueId
-                        ?>" class="flex-container flex-dir-column align-spaced align-middle margin-bottom-1 medium-margin-bottom-2 large-margin-bottom-0">
+                        ?>" class="flex-container flex-dir-column align-spaced align-middle">
                             <h2 class="h5 margin-top-0">Click or press to view the item description.</h2>
                         </button>
                         <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
