--- a/view/common/block-layout/resource-text-toggle-caption.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption.phtml
@@ -1,99 +1,100 @@
 <?php
-    /**
-     * @var \Laminas\View\Renderer\PhpRenderer $this
-     * @var \Omeka\Api\Representation\SitePageBlockRepresentation $block
-     * @var \Omeka\Api\Representation\SiteBlockAttachmentRepresentation[] $attachments
-     * @var string $heading
-     * @var string $html
-     * @var string $alignmentClass "left" or "right"
-     * @var string $thumbnailType
-     * @var string $showTitleOption "item_title" or "file_name" or "none".
-     * @var string $captionPosition "center", "left" or "right".
-     */
-    
-    $escape = $this->plugin('escapeHtml');
-    $hyperlink = $this->plugin('hyperlink');
-    $siteSetting = $this->plugin('siteSetting');
-    $uniqueId = uniqid();
-    $linkType = $siteSetting('attachment_link_type', 'item');
-    $filterLocale = (bool)$this->siteSetting('filter_locale_values');
-    $lang = $filterLocale ? $this->lang() : null; ?>
-<div class="full-width-css block media-text grid-x grid-padding-x align-spaced">
+/**
+ * @var \Laminas\View\Renderer\PhpRenderer $this
+ * @var \Omeka\Api\Representation\SitePageBlockRepresentation $block
+ * @var \Omeka\Api\Representation\SiteBlockAttachmentRepresentation[] $attachments
+ * @var string $heading
+ * @var string $html
+ * @var string $alignmentClass "left" or "right"
+ * @var string $thumbnailType
+ * @var string $showTitleOption "item_title" or "file_name" or "none".
+ * @var string $captionPosition "center", "left" or "right".
+ */
+
+$escape = $this->plugin('escapeHtml');
+$hyperlink = $this->plugin('hyperlink');
+$siteSetting = $this->plugin('siteSetting');
+
+$linkType = $siteSetting('attachment_link_type', 'item');
+
+$filterLocale = (bool) $this->siteSetting('filter_locale_values');
+$lang = $filterLocale ? $this->lang() : null;
+?>
+
+<div class="block media-text full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover padding-horizontal-1">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading medium-offset-1 large-offset-2">
-        <h2 class="h2 padding-vertical-1 margin-bottom-1"><?=$escape($heading) ?></h2>
+    <div class="grid-container cell margin-bottom-2 large-margin-bottom-3">
+        <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
-    <?php
-        endif; ?>
-    <div class="large-7 flex-container align-center">
-        <div class="attachments max-image-height">
-            <div class="<?=$alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image">
-                <?php
-                    foreach ($attachments as $attachment):
-                        $render = null;
-                        $title = null;
-                        $link = null;
-                        $item = $attachment->item();
-                        if ($item):
-                            $media = $attachment->media() ? : $item->primaryMedia();
-                            $mediaRenderer = $media->renderer();
-                            $mediaType = $media->mediaType();
-                            if ($media && $mediaRenderer === 'iiif') :
-                                echo $this->thumbnail($media, $this->thumbnailType);
-                            elseif ($media && $mediaType === 'image/jpeg') :
-                                echo $this->thumbnail($media, $this->thumbnailType);
-                            elseif ($media) :
-                                echo $media->render(['thumbnailType' => $thumbnailType,'link' => $link,]);
-                            endif;
-                        
-                    
-                            if ($showTitleOption == 'item_title'):
-                                $title = $item->displayTitle(null, $lang);
-                            elseif ($media && $showTitleOption == 'file_name'):
-                                $title = $media->displayTitle(null, $lang);
-                            endif;
-                    
-                            if ($title):
-                                if ($media && $linkType === 'media'):
-                                    $link = $media->link($title);
-                                elseif ($media && $linkType === 'original' && $media->hasOriginal()):
-                                    $link = $hyperlink($title, $media->originalUrl());
-                                else:
-                                    $link = $item->link($title);
-                                endif;
-                            endif;
+    <?php endif; ?>
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container align-self-middle max-block-height">
+    <div class="attachments">
+            <?php
+            foreach ($attachments as $attachment):
+                $render = null;
+                $title = null;
+                $link = null;
+                $item = $attachment->item();
+                if ($item):
+                    $media = $attachment->media() ? : $item->primaryMedia();
+                    $mediaRenderer = $media->renderer();
+                    $mediaType = $media->mediaType();
+                    if ($media && $mediaRenderer === 'iiif') :
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media && $mediaType === 'image/jpeg') :
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media) :
+                        echo $media->render(['thumbnailType' => $thumbnailType,'link' => $link,]);
+                    endif;
+                
+
+                    if ($showTitleOption == 'item_title'):
+                        $title = $item->displayTitle(null, $lang);
+                    elseif ($media && $showTitleOption == 'file_name'):
+                        $title = $media->displayTitle(null, $lang);
+                    endif;
+
+                    if ($title):
+                        if ($media && $linkType === 'media'):
+                            $link = $media->link($title);
+                        elseif ($media && $linkType === 'original' && $media->hasOriginal()):
+                            $link = $hyperlink($title, $media->originalUrl());
+                        else:
+                            $link = $item->link($title);
                         endif;
-                        $caption = $attachment->caption(); ?>
-                <div class="item resource">
-                    <?=$render
-                        ?>
-                    <?php if ($attachment->caption()): ?>
+                    endif;
+                endif;
+
+                $caption = $attachment->caption();
+            ?>
+            <div class="item resource toggle-caption">
+                <?= $render ?>
+                <?php if ($attachment->caption()): ?>
+                    <?php if (isset($caption) && !empty($caption)) : ?>
+                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?=$uniqueId
+                        ?>" class="flex-container flex-dir-column align-spaced align-middle">
+                            <h2 class="h5 margin-top-0">View the item description</h2>
+                        </button>
                         <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
                             <?=$caption
                                 ?>
                         </figcaption>
-                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?=$uniqueId
-                        ?>" class="flex-container flex-dir-column align-spaced align-middle margin-bottom-1 medium-margin-bottom-2 large-margin-bottom-0">
-                            <h2 class="h5 margin-top-0">Click or press to view the item description.</h2>
-                        </button>
-                    <?php endif ?>
-                </div>
-                <?php
-                    endforeach; ?>
+                    <?php endif; ?>
+                <?php endif; ?>
             </div>
+            <?php endforeach; ?>
         </div>
-        </button>
     </div>
-    <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-        <div class="metadata margin-bottom-1 separator-center">
-            <?php $showTitleOption = $this->showTitleOption; ?>
-            <?php if ($showTitleOption == "item_title"): ?>
-            <h2><?php echo $item->displayTitle(); ?></h2>
-            <?php elseif ($showTitleOption == "file_name"): ?>
-            <h2><?php echo $media->displayTitle(); ?></h2>
-            <?php endif; ?>
-        </div>
-        <div class="text">
+    <div class="resource-text large-6 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center padding-1 large-padding-2 xlarge-padding-3">
+    <div class="metadata margin-bottom-1 separator-center">
+        <?php $showTitleOption = $this->showTitleOption; ?>
+        <?php if ($showTitleOption == "item_title"): ?>
+        <h2><?php echo $item->displayTitle(); ?></h2>
+        <?php elseif ($showTitleOption == "file_name"): ?>
+        <h2><?php echo $media->displayTitle(); ?></h2>
+        <?php endif; ?>
+      </div>
+      <div class="text">
             <?= $html ?>
         </div>
         <div class="learn-more">
