--- a/view/common/block-layout/resource-text-toggle-caption-below.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption-below.phtml
@@ -73,7 +73,7 @@ $lang = $filterLocale ? $this->lang() : null;
                     <?php if (isset($caption) && !empty($caption)) : ?>
                         <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?=$uniqueId
                         ?>" class="flex-container flex-dir-column align-spaced align-middle">
-                            <h2 class="h5 margin-top-0">Click or press to view the item description.</h2>
+                            <h2 class="h5 margin-top-0">View item description</h2>
                         </button>
                         <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
                             <?=$caption
