--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2936,6 +2936,18 @@ figure.max-image-height img,
   }
 }
 
+/*Reveal caption*/
+button#reveal-caption {
+  margin: 0;
+  padding: 1rem;
+  width: 100%;
+  font-size: 1rem;
+}
+
+.reveal-caption {
+display: none;
+}
+
 /*Test slide overlay for OpenSeadragon Resource with text block*/ 
 .position-right #SeadragonOffCanvas {
   width: 600px;
