--- a/view/common/block-layout/resource-text-toggle-caption-below.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption-below.phtml
@@ -85,7 +85,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-6 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-6 flex-container flex-dir-column align-middle padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata margin-bottom-1 separator-center">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if (isset($item) && $showTitleOption == "item_title"): ?>
