--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1047,11 +1047,6 @@ display: none;
 .toggle-caption .orbit-caption {
   bottom: rem-calc(59px);
 }
-@include breakpoint(large) {
-.toggle-caption .orbit-caption {
-  bottom: rem-calc(60px);
-}
-}
 
 .text {
   padding: $global-padding 0;
@@ -1717,7 +1712,7 @@ span.resource-name {
 .item-listing,
 .image-cover-img img {
   width: 100vw;
-  min-height: 90vh;
+  height: 90vh;
   object-fit: cover;
   object-position: center;
 }
