Changed transparency of orbit background

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1049,6 +1049,10 @@ display: none;
 /*End Sensitive Material*/
 
 /*Toggle caption*/ 
+.orbit-caption {
+  background-color: rgba(10,10,10, .9); 
+}
+
 .toggle-caption .orbit-caption {
   bottom: rem-calc(59px);
 }
