--- a/view/common/search-form.phtml
+++ b/view/common/search-form.phtml
@@ -17,8 +17,6 @@ $searchValue = $this->escapeHtml($this->params()->fromQuery('fulltext_search', '
         placeholder="<?php echo $translate('Search'); ?>"
         aria-label="<?php echo $translate('Search'); ?>" class="input-group-field">
     <div class="input-group-button">
-        <button type="submit">
-            <?php echo $translate('Search'); ?>
-        </button>
+    <button type="submit" class="button"><?php echo $translate('Search'); ?></button>
     </div>
 </form>
