First pass at identifying an Item's Item Set

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -1,4 +1,3 @@
-@@ -1,160 +0,0 @@
 <?php
 $translate = $this->plugin('translate');
 $escape = $this->plugin('escapeHtml');
@@ -8,6 +7,10 @@ $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 $this->htmlElement('body')->appendAttribute('class', 'item resource show');
 $embedMedia = $this->siteSetting('item_media_embed', false);
 $itemMedia = $item->media();
+$itemSets = $item->itemSets();
+$itemSetNames = array_map(function($set) {
+    return $set->displayTitle();
+}, $itemSets);
 $showLayout = $this->themeSetting('show_layout');
 $mediaDisplay = $this->themeSetting('media_display');
 
@@ -68,18 +71,22 @@ foreach ($itemMedia as $index => $media) {
     <h2 class="label"><?php echo $translate('Item'); ?></h2>
 </div>
 
+<?php if (in_array("Sensitive Content", $itemSetNames))
+  echo $item->displayTitle();
+else
+  return;
+?>
+
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
 
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
         <?php 
         // Display the main viewer
-        if ($miradorViewer !== null) {
-            echo $miradorViewer;
-        }
-        elseif ($miradorImageViewer !== null) {
-            echo $miradorImageViewer;
-        } 
+        if (in_array("Sensitive Content", $itemSetNames) && ($miradorViewer !== null)) {
+            echo "<div class='blur-item'>" . $miradorViewer . "</div>";
+            }
+
         elseif ($universalViewer !== null) {
             echo $universalViewer;
         } 
