--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3016,6 +3016,16 @@ figure.max-image-height img,
   }
 }
 
+/*Blue Image*/
+/*Add blur feature*/
+.blur-item {
+  -webkit-filter: blur(5px);
+   -moz-filter: blur(5px);
+   -o-filter: blur(5px);
+   -ms-filter: blur(5px);
+   filter: blur(15px);
+}
+
 /*Click to reveal styling*/ 
 .dropdown-pane.is-open {
   display: contents;
