--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -86,7 +86,7 @@ foreach ($itemMedia as $index => $media) {
             "<i class='far fa-eye-slash fa-lg'></i>" .
             "<h2 class='h5 warning-text margin-top-1 xlarge-margin-top-2'>This item contains sensitive content which people may find offensive. Click or press to view.</h2>" .
             "</div>" .
-            "<div class='unblur-image' id='blur-image-{$uniqueId}' data-toggler='.unblur-image'> . $miradorImageViewer . </div>" .
+            "<div class='unblur-image sensitive-full-width' id='blur-image-{$uniqueId}' data-toggler='.unblur-image'>" . $miradorImageViewer . "</div>" .
             "</button>" .
             "</div>";
         } else {
