--- a/view/common/block-layout/resource-text-openseadragon-no-metadata.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-no-metadata.phtml
@@ -22,6 +22,7 @@ $linkType = $siteSetting('attachment_link_type', 'item');
 
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
+$currentLocale = $this->siteSetting('locale') ?: 'en_US';
 ?>
 
 <div class="block media-text full-width-css grid-x grid-padding-x">
