--- a/view/common/block-layout/resource-text-toggle-caption-dark.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption-dark.phtml
@@ -72,9 +72,12 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                 <?= $render ?>
                 <?php if ($attachment->caption()): ?>
                     <?php if (isset($caption) && !empty($caption)) : ?>
-                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?=$uniqueId
-                        ?>" class="flex-container flex-dir-column align-spaced align-middle button">
-                            <h2 class="h5 margin-top-0">Read a description of the image</h2>
+                        <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
+                            <?php if ($currentLocale == 'es'): ?>
+                                <h2 class="h5 margin-top-0">Ver más</h2>
+                            <?php else: ?>
+                                <h2 class="h5 margin-top-0">Read a description of the image</h2>
+                            <?php endif; ?>
                         </button>
                         <figcaption class="orbit-caption padding-1 reveal-caption" id="show-caption-id-<?=$uniqueId ?>" data-toggler=".reveal-caption">
                             <?=$caption
@@ -99,7 +102,11 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
             <?= $html ?>
         </div>
         <div class="learn-more">
-            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+            <?php if ($currentLocale == 'es'): ?>
+                <h2 class="button large warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+            <?php else: ?>
+                <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+            <?php endif; ?>
         </div>
     </div>
 </div>
