--- a/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
@@ -1,3 +1,8 @@
+<?php
+$siteSetting = $this->plugin('siteSetting');
+$currentLocale = $this->siteSetting('locale') ?: 'en_US';
+?>
+
 <div class="grix-x grid-container">
     <?php if (!empty($heading)): ?>
         <div class="media-text-heading medium-offset-1 large-offset-2">
@@ -39,7 +44,11 @@
                         <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
                     <?php endif; ?>
                     <div class="learn-more">
-                        <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                        <?php if ($currentLocale == 'es'): ?>
+                            <h2 class="button medium warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+                        <?php else: ?>
+                            <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                        <?php endif; ?>
                     </div>
                 </div>
         </div>
