--- a/view/common/block-layout/item-showcase-video.phtml
+++ b/view/common/block-layout/item-showcase-video.phtml
@@ -48,7 +48,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                     <?php endif; ?>
             <div class="learn-more">
                 <?php if ($currentLocale == 'es'): ?>
-                    <h2 class="button medium warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+                    <h2 class="button medium warning"><?php echo $item->link("Ver más"); ?></h2>
                 <?php else: ?>
                     <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
                 <?php endif; ?>
