--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -109,7 +109,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
         <div class="learn-more">
             <?php if ($currentLocale == 'es'): ?>
-                <h2 class="button large warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("Ver más"); ?></h2>
             <?php else: ?>
                 <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             <?php endif; ?>
