--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -106,7 +106,7 @@ endforeach; ?>
         </div>
         <div class="learn-more">
             <?php if ($currentLocale == 'es'): ?>
-                <h2 class="button large warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("Ver más"); ?></h2>
             <?php else: ?>
                 <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             <?php endif; ?>
