--- a/view/common/block-layout/resource-text-toggle-caption.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption.phtml
@@ -74,7 +74,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                     <?php if (isset($caption) && !empty($caption)) : ?>
                         <button id="reveal-caption" type="button" data-toggle="show-caption-id-<?= htmlspecialchars($uniqueId, ENT_QUOTES, 'UTF-8') ?>" class="flex-container flex-dir-column align-spaced align-middle button warning">
                             <?php if ($currentLocale == 'es'): ?>
-                                <h2 class="h5 margin-top-0">Ver más</h2>
+                                <h2 class="h5 margin-top-0">Lea la descripción de la imagen</h2>
                             <?php else: ?>
                                 <h2 class="h5 margin-top-0">Read a description of the image</h2>
                             <?php endif; ?>
@@ -103,7 +103,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
         <div class="learn-more">
             <?php if ($currentLocale == 'es'): ?>
-                <h2 class="button large warning"><?php echo $item->link("Lea la descripción de la imagen"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("Ver más"); ?></h2>
             <?php else: ?>
                 <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             <?php endif; ?>
