--- a/view/common/block-layout/resource-text-full-width-portrait-dark.phtml
+++ b/view/common/block-layout/resource-text-full-width-portrait-dark.phtml
@@ -80,12 +80,14 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
     </div>
     <div class="resource-text large-6 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
-        <div class="metadata margin-bottom-1 separator-center">
+        <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
-            <?php if (isset($item) && $showTitleOption == "item_title"): ?>
-                <h2><?php echo $item->displayTitle(); ?></h2>
-            <?php elseif (isset($media) && $showTitleOption == "file_name"): ?>
-                <h2><?php echo $media->displayTitle(); ?></h2>
+            <?php if ($showTitleOption == "item_title"): ?>
+            <h2><?php echo $item->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
+            <?php elseif ($showTitleOption == "file_name"): ?>
+            <h2><?php echo $media->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
             <?php endif; ?>
         </div>
         <div class="text">
