--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -87,12 +87,14 @@ endforeach; ?>
         </button>
     </div>
     <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
-        <div class="metadata margin-bottom-1 separator-center">
-        <?php $showTitleOption = $this->showTitleOption; ?>
+        <div class="metadata">
+            <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
             <h2><?php echo $item->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
             <?php elseif ($showTitleOption == "file_name"): ?>
             <h2><?php echo $media->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
             <?php endif; ?>
         </div>
         <div class="text">
