--- a/view/common/block-layout/resource-text-toggle-caption-dark.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption-dark.phtml
@@ -90,12 +90,14 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
     </div>
     <div class="resource-text large-6 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center padding-1 large-padding-2 xlarge-padding-3">
-    <div class="metadata margin-bottom-1 separator-center">
+    <div class="metadata">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == "item_title"): ?>
         <h2><?php echo $item->displayTitle(); ?></h2>
+        <div class="separator-center margin-bottom-1"></div>
         <?php elseif ($showTitleOption == "file_name"): ?>
         <h2><?php echo $media->displayTitle(); ?></h2>
+        <div class="separator-center margin-bottom-1"></div>
         <?php endif; ?>
       </div>
       <div class="text">
