--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -78,25 +78,15 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
     </div>
     <div class="resource-text xlarge-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
-        <div class="metadata margin-bottom-1 separator-center">
-        <?php $showTitleOption = $this->showTitleOption; ?>
+    <div class="metadata">
+            <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
             <h2><?php echo $item->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
             <?php elseif ($showTitleOption == "file_name"): ?>
             <h2><?php echo $media->displayTitle(); ?></h2>
+            <div class="separator-center margin-bottom-1"></div>
             <?php endif; ?>
-        <?php
-            $date = $item->value('dcterms:date');
-            if ($date):
-            ?>
-        <h2><small date><?php echo $date; ?></small></h2>
-        <?php endif; ?>
-        <?php
-            $origin = $item->value('curation:location');
-            if ($origin):
-            ?>
-        <h2><small origin><?php echo $origin; ?></small></h2>
-        <?php endif; ?>
         </div>
         <div class="text">
             <?= $html ?>
