Removed align-center from Resource with Text supporting texts

--- a/view/common/block-layout/resource-text-metadata-full-width.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width.phtml
@@ -77,7 +77,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-5 flex-container flex-dir-column align-middle padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
