--- a/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
@@ -75,7 +75,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
          endforeach; ?>
       </div>
    </div>
-    <div class="resource-text large-5 xlarge-4 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2">
+    <div class="resource-text large-5 xlarge-4 flex-container flex-dir-column align-middle padding-1 large-padding-2">
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
