--- a/view/common/block-layout/resource-text-image-cover-portrait.phtml
+++ b/view/common/block-layout/resource-text-image-cover-portrait.phtml
@@ -79,7 +79,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-6 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-6 flex-container grid-y grid-padding-y flex-dir-column align-middle padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
