--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -86,7 +86,7 @@ endforeach; ?>
             </div>
         </button>
     </div>
-    <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-5 flex-container flex-dir-column align-middle padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
