--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -79,7 +79,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text xlarge-4 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text xlarge-4 flex-container flex-dir-column align-middle padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
